# betX

./: .env.example  .gitignore  README.md  app.py  backtest_national.py  daily_scan.py  debug_everton.py  debug_season.py  deploy.sh  find_group.py  lineup_notifier.py  predict_wc_groups.py  pyproject.toml  reset_cache.py  run_backtest.py  show_all_bets.py  show_last_scan.py  strategie.md
betx/: __init__.py  __main__.py  config.py  logger.py
betx/analytics/: __init__.py  clv_tracker.py  performance_metrics.py  prediction_tracker.py
betx/backtest/: __init__.py  backtester.py
betx/dashboard/: __init__.py  app.py
betx/data/: __init__.py  base_collector.py  basketball_collector.py  elo_loader.py  espn_collector.py  football_collector.py  goalscorers_loader.py  martj42_loader.py  national_team_collector.py  national_team_features.py  odds_api_collector.py  odds_collector.py  tennis_collector.py  update_wc_dataset.py
betx/database/: __init__.py  helpers.py
betx/engine/: __init__.py  staking_engine.py  value_engine.py
betx/models/: __init__.py  basketball_model.py  football_model.py  tennis_model.py
betx/pipeline/: __init__.py  daily.py  (+4 more)
data/: daily_bets.json  elo_all_teams.json  elo_ratings.json  player_ratings.json  squad_values_2026.json  wc_predictions.json  worldcup_2026_matches.json
docs/: FIREBASE_FREE_TIER.md  VPS_DEPLOY.md
scripts/: prod_refresh.sh  scrape_fc26_ratings.py  test_sportsdb.py
tests/: __init__.py  test_backtest.py  test_basketball_model.py  test_engines.py  test_external_benchmark.py  test_football_model.py  test_tennis_model.py
(+3 files in other folders)
